fix spacing issues on mobile

--- a/src/components/cardInner/cardInner.module.css
+++ b/src/components/cardInner/cardInner.module.css
@@ -37,3 +37,9 @@
     padding: 25px 25px;
   }
 }
+
+@media (max-width: 550px) {
+  .cardInner {
+    padding: 15px 10px;
+  }
+}
